--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
         restart: always
         ports:
             - '8080:8080'
-        volumes:
+        #volumes:
             # Mounting the whole folder will create a clean distro without webapps and examples
             # Thats why custom apps must be added separately
             #Example: 
