Due to inability to configure the vsftpd package to accept anonymous connection, the ftp image was switched to docker-anon-ftp, which appears to be a preconfigured vsftpd image that accepts anonymous, read-only connections. Changing the vsftpd.conf in order for the server to accept also read-write connections leads to a fail at start, so it was left to read-only access.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,18 @@
 version: '3.3'
 services:
-    vsftpd:
-        image: fauria/vsftpd
+    ftp:
+        image: metabrainz/docker-anon-ftp
         volumes:
-            - 'ontologies:/home/vsftpd/admin'
+            - './ftp_dir:/var/ftp:ro'
         ports:
             - '20:20'
             - '21:21'
-            - '21100-21110:21100-21110'
-        environment:
-            - FTP_USER=admin
-            - FTP_PASS=admin
-            - PASV_ADDRESS=127.0.0.1
-            - PASV_MIN_PORT=21100
-            - PASV_MAX_PORT=21110
-        container_name: vsftpd
+            - '65500-65515:65500-65515'            
+        container_name: ftp
         restart: always
+        networks:
+            service1_net:
+                ipv4_address: 172.22.0.101
         
     camunda-bpm-platform:
         image: 'camunda/camunda-bpm-platform:latest'
@@ -49,8 +46,5 @@ networks:
       driver: default
       config:
         - subnet: 172.22.0.0/16  
-        
-volumes:
-  ontologies:
            
      
