--- a/ftp/vsftpd.conf
+++ b/ftp/vsftpd.conf
@@ -7,6 +7,21 @@ anon_upload_enable=YES
 anon_mkdir_write_enable=YES
 anon_other_write_enable=YES
 
+# SSL Configuration
+ssl_enable=YES
+allow_anon_ssl=YES
+force_local_data_ssl=YES
+force_local_logins_ssl=YES
+ssl_tlsv1_1=YES
+ssl_tlsv1_2=YES
+ssl_tlsv1=NO
+ssl_sslv2=NO
+ssl_sslv3=NO
+require_ssl_reuse=YES
+ssl_ciphers=HIGH
+rsa_cert_file=/etc/ssl/certs/vsftpd.crt
+rsa_private_key_file=/etc/ssl/private/vsftpd.key
+
 # Uncomment this to allow local users to log in.
 local_enable=YES
 
