--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,6 @@ variables:
 
 services:
   - docker:18.09-dind
-  - mysql
   
 default:
   tags:
@@ -25,3 +24,7 @@ ftp-branch:
     DOCKER_IMAGE_SUBPROJECT: /ftp
   extends:
     - .docker-build-branch
+
+say_hello:
+  script:
+    - echo 'Hello World'
