--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,9 @@ default:
   tags:
     - ILT
 
+say_hello:
+  image: hello-world
+
 ftp-master:
   variables:
     DOCKER_FILE_PATH: ./ftp/
@@ -24,7 +27,3 @@ ftp-branch:
     DOCKER_IMAGE_SUBPROJECT: /ftp
   extends:
     - .docker-build-branch
-
-say_hello:
-  script:
-    - echo 'Hello World'
