Playing around with Gitlab CI and Docker

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,6 +33,6 @@ say_hello:
   script:
     - echo "Hello world (from sript)"
 
-docker_hello:
-  stage: build
-  image: hello-world
+docker_hello_world:
+ script:
+  - docker run  hello-world
