--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,5 +26,8 @@ ftp-branch:
     - .docker-build-branch
 
 docker_hello_world:
+ image: hello-world
+ services:
+   -docker:dind
  script:
   - docker run hello-world
