--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,5 +29,8 @@ docker_hello_world:
  image: hello-world
  services:
    - docker:dind
+ before_script:
+    - docker login -u "#CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
  script:
-  - docker run hello-world
+  - docker build --pull -t "$CI_REGISTRY_NAMEE" .
+  - docker pus "$CI_REGISTRY_IMAGE"
