--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,5 +32,4 @@ docker_hello_world:
  before_script:
     - docker login -u "#CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
  script:
-  - docker build --pull -t "$CI_REGISTRY_NAMEE" .
-  - docker pus "$CI_REGISTRY_IMAGE"
+  - docker pull
