--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,3 +40,17 @@ mysql-branch:
     DOCKER_IMAGE_SUBPROJECT: /mysql
   extends:
     - .docker-build-branch
+
+camunda-master:
+  variables:
+    DOCKER_FILE_PATH: ./camunda/
+    DOCKER_IMAGE_SUBPROJECT: /camunda
+  extends:
+    - .docker-build-master
+
+camunda-branch:
+  variables:
+    DOCKER_FILE_PATH: ./camunda/
+    DOCKER_IMAGE_SUBPROJECT: /camunda
+  extends:
+    - .docker-build-branch
