--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,10 @@ services:
             - '3306:3306'
         networks:
             service1_net:
+    
+    test:
+        stage: test
+        script: mvn --version
                   
 networks:
   service1_net:
