--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,7 @@ mysql-branch:
     - .docker-build-branch
 
 camunda-master:
+  image: maven:3-jdk-8
   variables:
     DOCKER_FILE_PATH: ./camunda/
     DOCKER_IMAGE_SUBPROJECT: /camunda
@@ -56,7 +57,7 @@ camunda-branch:
   extends:
     - .docker-build-branch
 
-test:
+maven_standalone_test:
   stage: test
   image: maven:3-jdk-8
   script: mvn --version
