--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,8 @@ mysql-branch:
 
 camunda-master:
   image: maven:3-jdk-8
-  before_script: mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
+  before_script: 
+    - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
   variables:
     DOCKER_FILE_PATH: ./camunda/
     DOCKER_IMAGE_SUBPROJECT: /camunda
@@ -53,7 +54,8 @@ camunda-master:
 
 camunda-branch:
   image: maven:3-jdk-8
-  before_script: mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
+  before_script: 
+    - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
   variables:
     DOCKER_FILE_PATH: ./camunda/
     DOCKER_IMAGE_SUBPROJECT: /camunda
@@ -64,7 +66,7 @@ maven_standalone_test:
   stage: test
   image: maven:3-jdk-8
   script: 
-    -- mvn --version
-    -- mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
+    - mvn --version
+    - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
 
   
