--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,8 +44,8 @@ mysql-branch:
 
 camunda-master:
   #image: maven:3-jdk-8
-  before_script: 
-    - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
+  #before_script: 
+  #  - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
   variables:
     DOCKER_FILE_PATH: ./camunda/
     DOCKER_IMAGE_SUBPROJECT: /camunda
