--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,8 +54,8 @@ camunda-master:
 
 camunda-branch:
   #image: maven:3-jdk-8
-  before_script: 
-    - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
+  #before_script: 
+  #  - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
   variables:
     DOCKER_FILE_PATH: ./camunda/
     DOCKER_IMAGE_SUBPROJECT: /camunda
