--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -44,7 +44,7 @@ mysql-branch:
 
 camunda-master:
   image: maven:3-jdk-8
-  script: 
+  before_script: 
     - mvn --version
     - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
     - mvn dependency:get -Dartifact=commons-lang:commons-lang:2.6
@@ -56,7 +56,7 @@ camunda-master:
 
 camunda-branch:
   image: maven:3-jdk-8
-  script: 
+  before_script: 
     - mvn --version
     - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
     - mvn dependency:get -Dartifact=commons-lang:commons-lang:2.6
