--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,11 +43,11 @@ mysql-branch:
     - .docker-build-branch
 
 camunda-master:
-  image: maven:3-jdk-8
-  before_script: 
-    - mvn --version
-    - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
-    - mvn dependency:get -Dartifact=commons-lang:commons-lang:2.6
+  #image: maven:3-jdk-8
+  #before_script: 
+  #  - mvn --version
+  #  - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
+  #  - mvn dependency:get -Dartifact=commons-lang:commons-lang:2.6
   variables:
     DOCKER_FILE_PATH: ./camunda/
     DOCKER_IMAGE_SUBPROJECT: /camunda
@@ -55,11 +55,11 @@ camunda-master:
     - .docker-build-master
 
 camunda-branch:
-  image: maven:3-jdk-8
-  before_script: 
-    - mvn --version
-    - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
-    - mvn dependency:get -Dartifact=commons-lang:commons-lang:2.6
+  #image: maven:3-jdk-8
+  #before_script: 
+   # - mvn --version
+   # - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
+   # - mvn dependency:get -Dartifact=commons-lang:commons-lang:2.6
   variables:
     DOCKER_FILE_PATH: ./camunda/
     DOCKER_IMAGE_SUBPROJECT: /camunda
