--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ mysql-branch:
     - .docker-build-branch
 
 camunda-master:
-  #image: maven:3-jdk-8
+  image: maven
   #before_script: 
   #  - mvn --version
   #  - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
@@ -55,7 +55,7 @@ camunda-master:
     - .docker-build-master
 
 camunda-branch:
-  #image: maven:3-jdk-8
+  image: maven
   #before_script: 
    # - mvn --version
    # - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
