--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,9 +43,9 @@ mysql-branch:
     - .docker-build-branch
 
 camunda-master:
-  image: maven
-  #before_script: 
-  #  - mvn --version
+  #image: maven
+  before_script: 
+    - mvn --version
   #  - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
   #  - mvn dependency:get -Dartifact=commons-lang:commons-lang:2.6
   variables:
@@ -55,9 +55,9 @@ camunda-master:
     - .docker-build-master
 
 camunda-branch:
-  image: maven
-  #before_script: 
-   # - mvn --version
+  #image: maven
+  before_script: 
+    - mvn --version
    # - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
    # - mvn dependency:get -Dartifact=commons-lang:commons-lang:2.6
   variables:
