--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,12 +45,10 @@ camunda-master:
   before_script:
     - docker version
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker pull maven
-    - docker run maven
-    - mvn -v
-  variables:
-    DOCKER_FILE_PATH: ./camunda/
-    DOCKER_IMAGE_SUBPROJECT: /camunda
+    - docker pull camunda/camunda-bpm-platform
+ # variables:
+    #DOCKER_FILE_PATH: ./camunda/
+    #DOCKER_IMAGE_SUBPROJECT: /camunda
   extends:
     - .docker-build-master
 
@@ -58,12 +56,10 @@ camunda-branch:
   before_script:
     - docker version
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker pull maven
-    - docker run maven
-    - mvn -v
-  variables:
-    DOCKER_FILE_PATH: ./camunda/
-    DOCKER_IMAGE_SUBPROJECT: /camunda
+    - docker pull camunda/camunda-bpm-platform
+  #variables:
+    #DOCKER_FILE_PATH: ./camunda/
+    #DOCKER_IMAGE_SUBPROJECT: /camunda
   extends:
     - .docker-build-branch
 
