--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,6 +46,7 @@ camunda-master:
     - docker version
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - docker pull camunda/camunda-bpm-platform
+    - docker run camunda/camunda-bpm-platform
  # variables:
     #DOCKER_FILE_PATH: ./camunda/
     #DOCKER_IMAGE_SUBPROJECT: /camunda
@@ -57,6 +58,7 @@ camunda-branch:
     - docker version
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - docker pull camunda/camunda-bpm-platform
+    - docker run camunda/camunda-bpm-platform
   #variables:
     #DOCKER_FILE_PATH: ./camunda/
     #DOCKER_IMAGE_SUBPROJECT: /camunda
