--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,8 +57,7 @@ camunda-branch:
   before_script:
     - docker version
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker pull camunda/camunda-bpm-platform
-    - docker run camunda/camunda-bpm-platform
+    - docker build https://github.com/camunda/docker-camunda-bpm-platform
   #variables:
     #DOCKER_FILE_PATH: ./camunda/
     #DOCKER_IMAGE_SUBPROJECT: /camunda
