--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,7 +45,7 @@ camunda-master:
   before_script:
     - docker version
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker build github.com/camunda/docker-camunda-bpm-platform.git
+    - docker build camunda/Dockerfile
  # variables:
     #DOCKER_FILE_PATH: ./camunda/
     #DOCKER_IMAGE_SUBPROJECT: /camunda
@@ -56,7 +56,7 @@ camunda-branch:
   before_script:
     - docker version
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker build github.com/camunda/docker-camunda-bpm-platform.git
+    - docker build camunda/Dockerfile
   #variables:
     #DOCKER_FILE_PATH: ./camunda/
     #DOCKER_IMAGE_SUBPROJECT: /camunda
