--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -45,6 +45,8 @@ camunda-master:
   before_script:
     - docker version
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    - docker pull maven
+    - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
     - docker build camunda
  # variables:
     #DOCKER_FILE_PATH: ./camunda/
@@ -57,6 +59,7 @@ camunda-branch:
     - docker version
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - docker pull maven
+    - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
     - docker build camunda
   #variables:
     #DOCKER_FILE_PATH: ./camunda/
