--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ image: docker
 
 services:
   - docker:18.09-dind
+  - maven:3.3.9-jdk-8
 
 default:
   tags:
@@ -45,7 +46,6 @@ camunda-master:
   before_script:
     - docker version
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - apt install maven
     - mvn -v
     - docker build camunda
  # variables:
@@ -58,7 +58,6 @@ camunda-branch:
   before_script:
     - docker version
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - apt install maven
     - mvn -v
     - docker build camunda
   #variables:
