--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,6 +43,7 @@ mysql-branch:
     - .docker-build-branch
 
 camunda-master:
+  image: maven:3.3.9-jdk-8
   before_script:
     - docker version
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
@@ -55,6 +56,7 @@ camunda-master:
     - .docker-build-master
 
 camunda-branch:
+  image: maven:3.3.9-jdk-8
   before_script:
     - docker version
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
