--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,6 @@ image: docker
 
 services:
   - docker:18.09-dind
-  - maven:3.3.9-jdk-8
 
 default:
   tags:
@@ -43,10 +42,6 @@ mysql-branch:
     - .docker-build-branch
 
 camunda-master:
-  before_script:
-    - mvn --version
-    - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
-    - mvn dependency:get -Dartifact=commons-lang:commons-lang:2.6
   variables:
     DOCKER_FILE_PATH: ./camunda/
     DOCKER_IMAGE_SUBPROJECT: /camunda
@@ -54,22 +49,18 @@ camunda-master:
     - .docker-build-master
 
 camunda-branch:
-  before_script:
-    - mvn --version
-    - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
-    - mvn dependency:get -Dartifact=commons-lang:commons-lang:2.6
   variables:
     DOCKER_FILE_PATH: ./camunda/
     DOCKER_IMAGE_SUBPROJECT: /camunda
   extends:
     - .docker-build-branch
 
-#maven_standalone_test:
-#  stage: test
-#  image: maven:3-jdk-8
-#  script: 
-#    - mvn --version
-#    - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
-#    - mvn dependency:get -Dartifact=commons-lang:commons-lang:2.6
+maven_standalone_test:
+  stage: test
+  image: maven:3-jdk-8
+  script: 
+    - mvn --version
+    - mvn dependency:get -Dartifact=commons-collections:commons-collections:3.2.1
+    - mvn dependency:get -Dartifact=commons-lang:commons-lang:2.6
 
   
