Trying to pull camunda image directly from the hub

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,6 +56,11 @@ camunda-branch:
   extends:
     - .docker-build-branch
 
+camunda-hub-pull:
+  before_script: 
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    - docker pull camunda/camunda-bpm-platform
+
 camunda-standalone:
   stage: test 
   image: maven:latest
