--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,7 +57,7 @@ camunda-branch:
     - .docker-build-branch
 
 camunda-hub-pull:
-  before_script: 
+  script: 
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - docker pull camunda/camunda-bpm-platform
 
