--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -61,7 +61,7 @@ camunda-hub-pull:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - docker pull camunda/camunda-bpm-platform
     - docker tag camunda/camunda-bpm-platform camunda
-    - docker push camunda
+    - docker push gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker camunda
 
 
 camunda-standalone:
