--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,9 +60,7 @@ camunda-hub-pull:
   script: 
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - docker pull camunda/camunda-bpm-platform
-    - docker tag camunda/camunda-bpm-platform camunda
-    - docker push gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker camunda
-
+    - docker run camunda/camunda-bpm-platform camunda
 
 camunda-standalone:
   stage: test 
