--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,7 @@ camunda-hub-pull:
   script: 
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - docker pull camunda/camunda-bpm-platform
-    - docker run camunda/camunda-bpm-platform camunda
+    - docker run camunda/camunda-bpm-platform
 
 camunda-standalone:
   stage: test 
