--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -56,14 +56,20 @@ camunda-branch:
   extends:
     - .docker-build-branch
 
-camunda:
-  stage: test 
-  script: 
-    - docker docker build -f camunda/Dockerfile
-
 camunda-standalone:
   stage: test 
   image: maven:latest
   script:
     - mvn install -DskipTests -f camunda-standalone
   
+  ubuntu-container:
+    image: ubuntu
+    before_script:
+      - apt install maven
+      - mvn -version
+      - apt-get install apt-transport-https \ca-certificates \curl \gnupg-agent \ software-properties-common
+      - curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -
+      - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    script:
+      - docker build ./camunda
+
