--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,3 +49,11 @@ camunda-hub-pull:
     - docker pull camunda/camunda-bpm-platform
     - docker tag camunda/camunda-bpm-platform gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker/camunda
     - docker push gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker/camunda
+
+nginx-ingress:
+  before_script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+  script:
+    - docker pull nginx/nginx-ingress
+    - docker tag nginx/nginx-ingress gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker/nginx-ingress
+    - docker push gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker/nginx-ingress
