--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -60,7 +60,7 @@ hello-world-webserver:
     - docker tag strm/helloworld-http gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker/hello-world
     - docker push gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker/hello-world
 
-hello-world-webserver:
+filezilla-web-client:
   stage: build
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
