--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,7 +8,6 @@ image: docker
 
 services:
   - docker:18.09-dind
-  - maven:latest
 
 default:
   tags:
@@ -42,7 +41,7 @@ mysql-branch:
   extends:
     - .docker-build-branch
 
-camunda-hub-pull:
+camunda:
   stage: build
   before_script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
@@ -50,15 +49,6 @@ camunda-hub-pull:
     - docker pull camunda/camunda-bpm-platform
     - docker tag camunda/camunda-bpm-platform gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker/camunda
     - docker push gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker/camunda
-
-hello-world-webserver:
-  stage: build
-  before_script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-  script:
-    - docker pull strm/helloworld-http
-    - docker tag strm/helloworld-http gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker/hello-world
-    - docker push gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker/hello-world
 
 filezilla-web-client:
   stage: build
