Examples are added in the ftp

--- a/ftp/Dockerfile
+++ b/ftp/Dockerfile
@@ -51,6 +51,8 @@ RUN chown -R ftp:ftp /var/ftp/upload
 RUN chmod -R 777 /var/ftp/upload
 RUN chmod g+s /var/ftp/upload
 
+COPY /examples /var/ftp/upload
+
 VOLUME /home/vsftpd
 VOLUME /var/log/vsftpd
 
