--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -63,11 +63,7 @@ filezilla-web-client:
     - docker tag jlesage/filezilla gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker/filezilla-client
     - docker push gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker/filezilla-client
 
-hello-world-webserver:
-  stage: build
-  before_script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+test:
+  stage: test
   script:
-    - docker pull strm/helloworld-http
-    - docker tag strm/helloworld-http gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker/hello-world
-    - docker push gitlab-ext.iosb.fraunhofer.de:4567/symp/symp-docker/hello-world
+    - kubectl
