--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,6 +66,6 @@ filezilla-web-client:
 test:
   stage: test
   image:
-    name: chatwork/kubectl
+    name: bitnami/kubectl
   script:
     - kubectl
